--- a/package.json
+++ b/package.json
@@ -27,9 +27,20 @@
     "sirv-cli": "1.0.3"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
+    "aframe": "^1.2.0",
+    "aframe-animation-component": "^5.1.2",
+    "aframe-event-set-component": "^5.0.0",
+    "aframe-particle-system-component": "^1.1.3",
+    "aframe-react": "^4.4.0",
+    "aframe-text-geometry-component": "^0.5.1",
     "preact": "^10.3.2",
     "preact-render-to-string": "^5.1.4",
-    "preact-router": "^3.2.1"
+    "preact-router": "^3.2.1",
+    "react-redux": "^7.2.4",
+    "redaxios": "^0.4.1",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0"
   },
   "jest": {
     "preset": "jest-preset-preact",
