--- a/package.json
+++ b/package.json
@@ -1,52 +1,30 @@
 {
-  "private": true,
-  "name": "myits-connect-x",
-  "version": "0.0.0",
-  "license": "MIT",
   "scripts": {
-    "build": "preact build",
-    "serve": "sirv build --port 8080 --cors --single",
-    "dev": "preact watch",
-    "lint": "eslint src",
-    "test": "jest"
-  },
-  "eslintConfig": {
-    "extends": "preact",
-    "ignorePatterns": [
-      "build/"
-    ]
-  },
-  "devDependencies": { 
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-preact-pure": "^2.0.0",
-    "eslint": "^6.0.1",
-    "eslint-config-preact": "^1.1.0",
-    "jest": "^24.9.0",
-    "jest-preset-preact": "^1.0.0",
-    "preact-cli": "^3.0.0",
-    "sirv-cli": "1.0.3"
+    "start": "snowpack dev --port 3000",
+    "build": "snowpack build",
+    "test": "web-test-runner \"src/**/*.test.jsx\"",
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "lint": "prettier --check \"src/**/*.{js,jsx}\""
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
     "aframe": "^1.2.0",
     "aframe-animation-component": "^5.1.2",
-    "aframe-event-set-component": "^5.0.0",
-    "aframe-particle-system-component": "^1.1.3",
     "aframe-react": "^4.4.0",
-    "aframe-text-geometry-component": "^0.5.1",
-    "preact": "^10.3.2",
-    "preact-render-to-string": "^5.1.4",
-    "preact-router": "^3.2.1",
+    "preact": "^10.5.13",
     "react-redux": "^7.2.4",
     "redaxios": "^0.4.1",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0"
   },
-  "jest": {
-    "preset": "jest-preset-preact",
-    "setupFiles": [
-      "<rootDir>/tests/__mocks__/browserMocks.js",
-      "<rootDir>/tests/__mocks__/setupTests.js"
-    ]
+  "devDependencies": {
+    "@prefresh/snowpack": "^3.0.0",
+    "@snowpack/plugin-dotenv": "^2.1.0",
+    "@snowpack/web-test-runner-plugin": "^0.2.2",
+    "@testing-library/preact": "^2.0.1",
+    "@web/test-runner": "^0.13.3",
+    "chai": "^4.3.4",
+    "prettier": "^2.2.1",
+    "snowpack": "^3.0.1"
   }
 }
