--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@reduxjs/toolkit": "^1.5.1",
     "aframe": "^1.2.0",
     "aframe-animation-component": "^5.1.2",
+    "aframe-effects": "^0.9.1",
+    "aframe-event-set-component": "^5.0.0",
     "aframe-react": "^4.4.0",
+    "aframe-template-component": "^3.2.1",
     "preact": "^10.5.13",
     "react-redux": "^7.2.4",
     "redaxios": "^0.4.1",
