--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aframe-animation-component": "^5.1.2",
     "aframe-effects": "^0.9.1",
     "aframe-event-set-component": "^5.0.0",
+    "aframe-look-at-component": "^1.0.0",
     "aframe-react": "^4.4.0",
     "aframe-template-component": "^3.2.1",
     "preact": "^10.5.13",
