--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myits-connect-x",
-  "version": "0.1.0", 
+  "version": "0.1.0",
   "license": "MIT",
   "scripts": {
     "start": "snowpack dev --port 3000",
@@ -15,9 +15,11 @@
     "aframe-animation-component": "^5.1.2",
     "aframe-effects": "^0.9.1",
     "aframe-event-set-component": "^5.0.0",
+    "aframe-htmlembed-component": "^1.0.0",
     "aframe-look-at-component": "^1.0.0",
     "aframe-react": "^4.4.0",
     "aframe-template-component": "^3.2.1",
+    "html-react-parser": "^1.2.6",
     "preact": "^10.5.13",
     "react-redux": "^7.2.4",
     "redaxios": "^0.4.1",
